MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/AccountRecord__c.field-meta.xml
<CustomField>
    <fullName>AccountRecord__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountRecord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>