MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Address_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Address_Confirmed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Confirmed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>