MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>