MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Call_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Handle_Time__c</fullName>
    <formula>(CallEndDateTime - CallAcceptDateTime) *24*60*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Handle Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>