MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>Call_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>