MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/ContactRecord__c.field-meta.xml
<CustomField>
    <fullName>ContactRecord__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactRecord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>