MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Escalation_Details__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>