MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Escalation_reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>