MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/G_Caller_Number__c.field-meta.xml
<CustomField>
    <fullName>G_Caller_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>G Caller Number</label>
    <type>Phone</type>
</CustomField>