MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Genesys_Auto_Wrapup__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Auto_Wrapup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Genesys Auto Wrapup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>