MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Genesys_Interaction_URL__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Interaction_URL__c</fullName>
    <formula>HYPERLINK(&apos;https://apps.mypurecloud.de/directory/#/analytics/interactions/&apos;+External_ID__c+&apos;/recording/&apos;, &quot;View Interaction Genesys&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Genesys Interaction URL</label>
    <type>Text</type>
</CustomField>