MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/genesysps__Last_utterance__c.field-meta.xml
<CustomField>
    <fullName>genesysps__Last_utterance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last utterance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>