MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Interaction_Topics__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Topics__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Topics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>