MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>