MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/LeadRecord__c.field-meta.xml
<CustomField>
    <fullName>LeadRecord__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LeadRecord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>