MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Omni_Wrap_Duration_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Omni_Wrap_Duration_in_Seconds__c</fullName>
    <label>Omni Wrap Duration in Seconds</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>