MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sentiment Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>