MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Troubleshooter_Completed__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooter_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Troubleshooter Completed</label>
    <type>Checkbox</type>
</CustomField>