MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Voice_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Voice_Disposition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Voice Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>