MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/fields/Voice_Issue__c.field-meta.xml
<CustomField>
    <fullName>Voice_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Voice Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>