MODON MRE BPDEV/force-app/main/default/objects/VoiceCall/listViews/Dump_Queue_VoiceCall.listView-meta.xml
<ListView>
    <fullName>Dump_Queue_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>Dump Queue</label>
    <queue>Dump_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>